--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,5 +1,3 @@
-
-
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
@@ -176,7 +174,8 @@ textarea {
  */
 
 button,
-input { /* 1 */
+input {
+  /* 1 */
   overflow: visible;
 }
 
@@ -186,7 +185,8 @@ input { /* 1 */
  */
 
 button,
-select { /* 1 */
+select {
+  /* 1 */
   text-transform: none;
 }
 
@@ -350,11 +350,13 @@ template {
   display: none;
 }
 
-.page-enter-active, .page-leave-active {
-  transition: all 0.30s;
+.page-enter-active,
+.page-leave-active {
+  transition: all 0.3s;
 }
 
-.page-enter, .page-leave-active {
+.page-enter,
+.page-leave-active {
   opacity: 0;
   transition: scale(0);
 }
