--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -360,3 +360,9 @@ template {
   opacity: 0;
   transition: scale(0);
 }
+
+
+@font-face {
+  font-family: 'MonoLisa-Regular';
+  src: url("assets/fonts/monolisa/MonoLisa-Regular.ttf") format('truetype');
+}
