--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -361,8 +361,7 @@ template {
   transition: scale(0);
 }
 
-
 @font-face {
-  font-family: 'MonoLisa-Regular';
-  src: url("assets/fonts/monolisa/MonoLisa-Regular.ttf") format('truetype');
+  font-family: "MonoLisa-Regular";
+  src: url("assets/fonts/monolisa/MonoLisa-Regular.ttf") format("truetype");
 }
