--- a/assets/css/variables/colors.scss
+++ b/assets/css/variables/colors.scss
@@ -1,4 +1,4 @@
-$primary-color: #5643CC;
-$primary-color-light: #455EB5;
+$primary-color: #5643cc;
+$primary-color-light: #455eb5;
 $subtitle-color: #a0a0a0;
 $table-info-background-row: #a0a0a0;
